corrected text-icon alignment

--- a/src/styles/typeIconPair.css
+++ b/src/styles/typeIconPair.css
@@ -12,6 +12,7 @@
 .typeIconPair {
   display: flex;
   flex-direction: row;
+  align-items: start;
 }
 
 .typeIconPair .iconItem,
